# rusty-adthan

./: Cargo.toml  \  shell.nix
src/: lib.rs  main.rs
