[package]
name = "rusty-adthan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
gtk = "0.18.1"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
rodio = "0.17.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tray-icon = "0.11.0"
winit = "0.29.4"
